# amd-umr

./: CMakeLists.txt  Makefile  NEWREPO  README
cmake_modules/: FindLibDRM.cmake  FindPCIAccess.cmake
demo/dgpu_pwm/: Makefile  main.c
demo/npi/: README  fakerizo  fakerizo2  new_chip
demo/update/: README  carrizo.update  read_sensor.sh
demo/vega10_pwm/: Makefile  main.c
doc/: CMakeLists.txt  umr.1
doc/sphinx/source/: basic.rst  build.rst  conf.py  create_asic.rst  index.rst  intro.rst  libpm4_stream.rst  libregister_access.rst  libsdma_stream.rst  libshader_disasm.rst  libumr_api.rst  libvm_access.rst  libwave_status.rst  npi_scripting.rst  profiler.rst  register_access.rst  ring.rst  top.rst  update_asic.rst  vm_decoding.rst  wave_status.rst
scripts/: npi.sh  parse_bits.sh  soc15_asic.sh  soc15_parse.sh
src/: CMakeLists.txt  umr.h  umrapp.h
src/app/: CMakeLists.txt  enum.c  ib_read.c  main.c  print.c  print_config.c  print_waves.c  profile.c  ring_read.c  scan.c  scan_log.c  set_bit.c  set_reg.c  top.c  umr_lookup.c
src/lib/: CMakeLists.txt  bitfield_print.c  close_asic.c  create_asic_from_script.c  create_asic_helper.c  create_mmio_accel.c  discover.c  discover_by_did.c  discover_by_name.c  dump_ib.c  find_reg.c  free_maps.c  grab_frame.c  mmio.c  query_drm.c  read_gpr.c  read_sensor.c  read_sgpr.c  read_vram.c  ring_decode.c  scan_config.c  scan_waves.c  shader_disasm.c  sq_cmd_halt_waves.c  transfer_soc15.c  umr_apply_bank_address.c  umr_apply_callbacks.c  umr_llvm_disasm.c  umr_pm4_decode_opcodes.c  umr_read_pm4_stream.c  umr_read_ring_data.c  umr_read_sdma_stream.c  umr_sdma_decode_opcodes.c  update.c  version.c  wave_status.c
src/lib/asic/: CMakeLists.txt  bonaire.c  carrizo.c  fiji.c  hainan.c  hawaii.c  kabini.c  kaveri.c  mullins.c  oland.c  pitcairn.c  polaris10.c  polaris11.c  polaris12.c  raven1.c  stoney.c  tahiti.c  tonga.c  topaz.c  vega10.c  vega10.i  vega12.c  vega20.c  vega20.i  vegam.c  verde.c
src/lib/ip/: CMakeLists.txt  bif30.c  bif30_bits.i  bif30_regs.i  bif41.c  bif41_bits.i  bif41_regs.i  bif50.c  bif50_bits.i  bif50_regs.i  bif51.c  bif51_bits.i  bif51_regs.i  dce100.c  dce100_bits.i  dce100_regs.i  dce110.c  dce110_bits.i  dce110_regs.i  dce112.c  dce112_bits.i  dce112_regs.i  dce120.c  dce120_bits.i  dce120_regs.i  dce60.c  dce60_bits.i  dce60_regs.i  dce80.c  dce80_bits.i  dce80_regs.i  dcn10.c  dcn10_bits.i  dcn10_regs.i  gfx60.c  gfx60_bits.i  gfx60_regs.i  gfx70.c  gfx70_bits.i  gfx70_regs.i  (+150 more)
src/lib/lowlevel/linux/: CMakeLists.txt  discover.c  mem.c  mmio.c  query_drm.c  read_gpr.c  read_sensor.c  umr_free_asic.c  umr_shader_disasm.c  wave_status.c
