# Copyright 2017 Edward O'Callaghan <funfunctor@folklore1984.net>

#library objects (ASICs blocks)
add_library(asic OBJECT
  bonaire.c
  carrizo.c
  fiji.c
  hainan.c
  hawaii.c
  kabini.c
  kaveri.c
  mullins.c
  oland.c
  pitcairn.c
  polaris10.c
  polaris11.c
  polaris12.c
  raven1.c
  stoney.c
  tahiti.c
  tonga.c
  topaz.c
  vega10.c
  verde.c
)
